<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="clear_db">Clear database</string>
    <string name="asteroid_description">Asteroid %s seen on %s deemed %s for earth</string>
    <string name="asteroid_detailed_description">Asteroid %s seen on %s deemed %s for earth.
        Absolute magnitude of %f au.
        Estimated diameter %f km.
        Relative velocity %f km/s.
        Distance from earth %f au</string>
    <string name="hazardous">Potentially hazardous</string>
    <string name="non_hazardous">Not hazardous</string>
    <string name="daily_image_description">Image of the day from nasa</string>
    <string name="loading_list_of_asteroids">loading list of asteroids</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="set_favorite">Set as favorite</string>
    <string name="added_favorite">Added to favorites</string>
    <string name="removed_favorite">Removed from favorites</string>
    <string name="hazard_image">Hazardous asteroid image</string>
    <string name="non_hazard_image">Non hazardous asteroid image</string>
    <string name="learn_more_au">Learn more about the Astronomical unit(au)</string>
</resources>
