<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.asteroidradar.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/set_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                asteroidDetailDescription="@{viewModel.asteroid}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_main_image_of_the_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:asteroidHazardDescription="@{viewModel.asteroid.potentiallyHazardous}"
                    app:asteroidStatusImage="@{viewModel.asteroid.potentiallyHazardous}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@drawable/asteroid_safe" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        style="@style/asteroid_detail_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.asteroid.closeApproachDate}"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title"
                            android:textColor="@color/default_text_color" />

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            style="@style/asteroid_detail_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:astronomicalUnitText="@{viewModel.asteroid.absoluteMagnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/learn_more_au"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_help_circle" />

                </LinearLayout>

                <TextView
                    style="@style/asteroid_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_diameter_title" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    style="@style/asteroid_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:kmUnitText="@{viewModel.asteroid.estimatedDiameter}"
                    tools:text="0.82 km" />

                <TextView
                    style="@style/asteroid_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relative_velocity_title" />

                <TextView
                    android:id="@+id/relative_velocity"
                    style="@style/asteroid_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:velocityText="@{viewModel.asteroid.relativeVelocity}"
                    tools:text="11.9 km/s" />

                <TextView
                    style="@style/asteroid_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_from_earth_title" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    style="@style/asteroid_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:astronomicalUnitText="@{viewModel.asteroid.distanceFromEarth}"
                    tools:text="0.0924 au" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/set_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:setAsFavorite="@{viewModel.asteroid.favorite}"
            tools:text="@string/set_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>